modules/parsers/parser-xsjob/com.sap.xsk.parser.xsjob/src/main/java/com/sap/xsk/parser/xsjob/core/XsjobParser.java
// Generated from Xsjob.g4 by ANTLR 4.3
package com.sap.xsk.parser.xsjob.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XsjobParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__4=1, T__3=2, T__2=3, T__1=4, T__0=5, STRING=6, WS=7, LCB=8, RCB=9, 
		LB=10, RB=11, COL=12, CM=13;
	public static final String[] tokenNames = {
		"<INVALID>", "'\"parameter\"'", "'\"schedules\"'", "'\"action\"'", "'\"xscron\"'", 
		"'\"description\"'", "STRING", "WS", "'{'", "'}'", "'['", "']'", "':'", 
		"','"
	};
	public static final int
		RULE_xsjobsequence = 0, RULE_property = 1, RULE_description = 2, RULE_action = 3, 
		RULE_schedules = 4, RULE_schedule = 5, RULE_items = 6, RULE_item_description = 7, 
		RULE_xscron = 8, RULE_parameter = 9, RULE_param = 10;
	public static final String[] ruleNames = {
		"xsjobsequence", "property", "description", "action", "schedules", "schedule", 
		"items", "item_description", "xscron", "parameter", "param"
	};

	@Override
	public String getGrammarFileName() { return "Xsjob.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XsjobParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class XsjobsequenceContext extends ParserRuleContext {
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public TerminalNode LCB() { return getToken(XsjobParser.LCB, 0); }
		public TerminalNode RCB() { return getToken(XsjobParser.RCB, 0); }
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public XsjobsequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xsjobsequence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterXsjobsequence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitXsjobsequence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitXsjobsequence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XsjobsequenceContext xsjobsequence() throws RecognitionException {
		XsjobsequenceContext _localctx = new XsjobsequenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xsjobsequence);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(22); match(LCB);
			setState(24); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(23); property();
				}
				}
				setState(26); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__2) | (1L << T__0))) != 0) );
			setState(28); match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public SchedulesContext schedules() {
			return getRuleContext(SchedulesContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_property);
		try {
			setState(33);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(30); description();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(31); action();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(32); schedules();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public TerminalNode STRING() { return getToken(XsjobParser.STRING, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); match(T__0);
			setState(36); match(COL);
			setState(37); match(STRING);
			setState(38); match(CM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public TerminalNode STRING() { return getToken(XsjobParser.STRING, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); match(T__2);
			setState(41); match(COL);
			setState(42); match(STRING);
			setState(43); match(CM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SchedulesContext extends ParserRuleContext {
		public ScheduleContext schedule(int i) {
			return getRuleContext(ScheduleContext.class,i);
		}
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public List<ScheduleContext> schedule() {
			return getRuleContexts(ScheduleContext.class);
		}
		public TerminalNode RB() { return getToken(XsjobParser.RB, 0); }
		public TerminalNode LB() { return getToken(XsjobParser.LB, 0); }
		public SchedulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterSchedules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitSchedules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitSchedules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchedulesContext schedules() throws RecognitionException {
		SchedulesContext _localctx = new SchedulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_schedules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); match(T__3);
			setState(46); match(COL);
			setState(47); match(LB);
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48); schedule();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LCB );
			setState(53); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScheduleContext extends ParserRuleContext {
		public List<ItemsContext> items() {
			return getRuleContexts(ItemsContext.class);
		}
		public ItemsContext items(int i) {
			return getRuleContext(ItemsContext.class,i);
		}
		public TerminalNode LCB() { return getToken(XsjobParser.LCB, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public TerminalNode RCB() { return getToken(XsjobParser.RCB, 0); }
		public ScheduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterSchedule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitSchedule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitSchedule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScheduleContext schedule() throws RecognitionException {
		ScheduleContext _localctx = new ScheduleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_schedule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); match(LCB);
			setState(57); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(56); items();
				}
				}
				setState(59); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__1) | (1L << T__0))) != 0) );
			setState(61); match(RCB);
			setState(63);
			_la = _input.LA(1);
			if (_la==CM) {
				{
				setState(62); match(CM);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemsContext extends ParserRuleContext {
		public ParameterContext parameter() {
			return getRuleContext(ParameterContext.class,0);
		}
		public Item_descriptionContext item_description() {
			return getRuleContext(Item_descriptionContext.class,0);
		}
		public XscronContext xscron() {
			return getRuleContext(XscronContext.class,0);
		}
		public ItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_items; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemsContext items() throws RecognitionException {
		ItemsContext _localctx = new ItemsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_items);
		try {
			setState(68);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(65); item_description();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(66); xscron();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(67); parameter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Item_descriptionContext extends ParserRuleContext {
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public TerminalNode STRING() { return getToken(XsjobParser.STRING, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public Item_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterItem_description(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitItem_description(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitItem_description(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Item_descriptionContext item_description() throws RecognitionException {
		Item_descriptionContext _localctx = new Item_descriptionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_item_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); match(T__0);
			setState(71); match(COL);
			setState(72); match(STRING);
			setState(73); match(CM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XscronContext extends ParserRuleContext {
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public TerminalNode STRING() { return getToken(XsjobParser.STRING, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public XscronContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xscron; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterXscron(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitXscron(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitXscron(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XscronContext xscron() throws RecognitionException {
		XscronContext _localctx = new XscronContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_xscron);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75); match(T__1);
			setState(76); match(COL);
			setState(77); match(STRING);
			setState(78); match(CM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public TerminalNode LCB() { return getToken(XsjobParser.LCB, 0); }
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TerminalNode RCB() { return getToken(XsjobParser.RCB, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(T__4);
			setState(81); match(COL);
			setState(82); match(LCB);
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83); param();
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRING );
			setState(88); match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public TerminalNode STRING(int i) {
			return getToken(XsjobParser.STRING, i);
		}
		public List<TerminalNode> STRING() { return getTokens(XsjobParser.STRING); }
		public TerminalNode COL() { return getToken(XsjobParser.COL, 0); }
		public TerminalNode CM() { return getToken(XsjobParser.CM, 0); }
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XsjobListener ) ((XsjobListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof XsjobVisitor ) return ((XsjobVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(STRING);
			setState(91); match(COL);
			setState(92); match(STRING);
			setState(94);
			_la = _input.LA(1);
			if (_la==CM) {
				{
				setState(93); match(CM);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}